src/css/subscribe.css
/* ############################################# */
/* ###############   SUBSCRIBE   ############### */
/* ############################################# */

.subscribe-container {
    height: 370px;
    padding-top: 62px;
    padding-bottom: 63px;
}

.subscribe-title {
    font-weight: 600;
    font-size: 24px;
    line-height: 1.17;
    text-align: center;
    letter-spacing: -0.03em;
    text-transform: uppercase;
    color: #FFFFFF;
    max-width: 378px;
    max-height: 56px;
}

.subscribe-description {
    color: #FFFFFF;
    text-align: center;
    max-width: 467px;
}

.subscribe-wrapper {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 24px;
    margin-left: auto;
    margin-right: auto;
}

.subscribe-button {
    align-items: center;
    min-height: 50px;
    min-width: 172px;
    padding: 14px 40px;
    border: none;
    border-radius: 100px;
    background-color: var(--accent-color);
    color: #FFFFFF;
    font-weight: 600;
    font-size: 18px;
    line-height: 1.22;
}

.subscribe-section {
    background-repeat: no-repeat;
    height: 370px;
    background-size: cover;
    background-position: center;
    margin-left: auto;
    margin-right: auto;
}

.subscribe-section {
    background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-tablet-img-min.jpg);
    background-repeat: no-repeat;
    width: 375px;
}

@media (min-device-pixel-ratio: 2),
(-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi),
(min-resolution: 2dppx) {
    .subscribe-section {
        background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-mobile-img@2x-min.jpg);
    }
}

/* ================   0-374PX   ================ */
@media screen and (max-width: 374px) {
    .subscribe-section {
        max-width: 375px;
        width: 100%;
        height: 100%;
    }

    .subscribe-description {
        width: 100%;
        max-width: 375px;
        height: 100%;
    }

    .subscribe-title {
        width: 100%;
        height: 100%;
        max-height: 100%;
    }

    .subscribe-container {
        height: 100%;
    }

    .subscribe-button {
        min-height: 41px;
        min-width: 128px;
        padding: 12px 28px;
        font-size: 14px;
        line-height: 1.2;
    }
}

/* ================================================ */


/* ===============   MOBILE   =============== */
@media screen and (min-width: 375px) and (max-width: 767px) {
    .subscribe-button {
        min-height: 41px;
        min-width: 128px;
        padding: 12px 28px;
        font-size: 14px;
        line-height: 1.2;
    }

    .subscribe-title {
        font-size: 20px;
        max-width: 291px;
        max-height: 48px;
    }

    .subscribe-description {
        max-width: 326px;
    }
}

/* ============================================= */


/* ===============   +768PX   =============== */
@media screen and (min-width: 768px) {
    .subscribe-container {
        padding-top: 72px;
        padding-bottom: 72px;
    }
}

/* ============================================= */



/* ===============   TABLET   =============== */
@media screen and (min-width: 768px) and (max-width: 1199px) {
    .subscribe-section {
        background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-tablet-img-min.jpg);
        background-repeat: no-repeat;
        width: 768px;
    }

    @media (min-device-pixel-ratio: 2),
    (-webkit-min-device-pixel-ratio: 2),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
        .subscribe-section {
            background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-tablet-img@2x-min.jpg);
        }
    }
}

/* ============================================= */


/* ===============   DESKTOP   =============== */
@media screen and (min-width: 1200px) {
    .subscribe-section {
        background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-desktop-img-min.jpg);
        background-repeat: no-repeat;
        width: 1200px;
        height: 370px;
        background-size: cover;
        background-position: center;
        margin-left: auto;
        margin-right: auto;
    }

    @media (min-device-pixel-ratio: 2),
    (-webkit-min-device-pixel-ratio: 2),
    (min-resolution: 192dpi),
    (min-resolution: 2dppx) {
        .subscribe-section {
            background-image: url(../img/subscribe/subscribe-bg-img/subcribe-bg-desktop-img@2x-min.jpg);
        }
    }
}

/* ============================================= */
/* ############################################# */
/* ############################################# */
/* ############################################# */

